# tg_yt_playlists

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mini  Dockerfile.simple  Dockerfile.test  README.md  debug_import.py  docker-compose.yml  prompt.txt  pyproject.toml  render.yaml  requirements.txt  run_local.py  start_bot.sh  test_errors.py  test_local_write.txt
src/: bot.py  config.py  database.py  entry.py  google_oauth.py  intersection.py  models.py  youtube.py
tests/: conftest.py  test_bot.py  test_database.py  test_google_oauth.py  test_intersection.py  test_youtube.py
